[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/assets/Fonts/Luna.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/assets/GUI/Buttons/Click_button.png" type="Texture" id=2]
[ext_resource path="res://src/assets/GUI/Buttons/Normal_button.png" type="Texture" id=3]
[ext_resource path="res://src/assets/GUI/Buttons/Hover_button.png" type="Texture" id=4]
[ext_resource path="res://src/scripts/Pause.gd" type="Script" id=5]
[ext_resource path="res://src/scripts/Settings.gd" type="Script" id=6]
[ext_resource path="res://src/assets/GUI/Menu.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 1 )

[node name="PauseScene" type="CanvasLayer"]
layer = 2

[node name="Control2" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Control2"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control2/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.72549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/Control/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -470.0
margin_top = -400.0
margin_right = 470.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control2/Control/ColorRect/VBoxContainer"]
margin_right = 940.0
margin_bottom = 232.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1

[node name="ResumeButton" type="TextureButton" parent="Control2/Control/ColorRect/VBoxContainer"]
margin_top = 236.0
margin_right = 940.0
margin_bottom = 372.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="Control2/Control/ColorRect/VBoxContainer/ResumeButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.5
margin_top = -53.0
margin_right = 77.5
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="Control2/Control/ColorRect/VBoxContainer"]
margin_top = 376.0
margin_right = 940.0
margin_bottom = 512.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="Control2/Control/ColorRect/VBoxContainer/SettingsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.5
margin_top = -53.0
margin_right = 80.5
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Control2/Control/ColorRect/VBoxContainer"]
margin_top = 516.0
margin_right = 940.0
margin_bottom = 652.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="Control2/Control/ColorRect/VBoxContainer/BackButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -53.0
margin_right = 210.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Back to Main Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="Control2/Control/ColorRect/VBoxContainer"]
margin_top = 656.0
margin_right = 940.0
margin_bottom = 792.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="Control2/Control/ColorRect/VBoxContainer/QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.5
margin_top = -53.0
margin_right = 77.5
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Quit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="Control2"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control2/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/Settings/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -470.0
margin_top = -349.0
margin_right = 470.0
margin_bottom = 349.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="Control2/Settings/TextureRect/VBoxContainer"]
margin_right = 940.0
margin_bottom = 232.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Settings"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/Settings/TextureRect/VBoxContainer"]
margin_top = 252.0
margin_right = 940.0
margin_bottom = 831.0
custom_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/Settings/TextureRect/VBoxContainer/VBoxContainer"]
margin_right = 940.0
margin_bottom = 111.0

[node name="VolumeLabel" type="Label" parent="Control2/Settings/TextureRect/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 940.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="Control2/Settings/TextureRect/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 940.0
margin_bottom = 111.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="Control2/Settings/TextureRect/VBoxContainer/VBoxContainer"]
margin_top = 161.0
margin_right = 940.0
margin_bottom = 252.0
custom_constants/separation = 100

[node name="MuteCheckbox" type="CheckBox" parent="Control2/Settings/TextureRect/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 271.0
margin_bottom = 91.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/check_vadjust = 0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
enabled_focus_mode = 0
text = "Mute Music"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control2/Settings/TextureRect/VBoxContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 940.0
margin_bottom = 393.0
custom_constants/separation = 100

[node name="FullscreenCheckbox" type="CheckBox" parent="Control2/Settings/TextureRect/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 226.0
margin_bottom = 91.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/check_vadjust = 0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
enabled_focus_mode = 0
text = "Fullscreen"

[node name="BackButton" type="TextureButton" parent="Control2/Settings/TextureRect/VBoxContainer/VBoxContainer"]
margin_top = 443.0
margin_right = 940.0
margin_bottom = 579.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="Control2/Settings/TextureRect/VBoxContainer/VBoxContainer/BackButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -53.0
margin_right = 50.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control2/Control/ColorRect/VBoxContainer/ResumeButton" to="Control2" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Control2/Control/ColorRect/VBoxContainer/SettingsButton" to="Control2" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Control2/Control/ColorRect/VBoxContainer/BackButton" to="Control2" method="_on_BackButton_pressed"]
[connection signal="pressed" from="Control2/Control/ColorRect/VBoxContainer/QuitButton" to="Control2" method="_on_QuitButton_pressed"]
[connection signal="value_changed" from="Control2/Settings/TextureRect/VBoxContainer/VBoxContainer/VBoxContainer/HSlider" to="Control2/Settings" method="_on_HSlider_value_changed"]
[connection signal="toggled" from="Control2/Settings/TextureRect/VBoxContainer/VBoxContainer/HBoxContainer3/MuteCheckbox" to="Control2" method="_on_MuteCheckbox_toggled"]
[connection signal="toggled" from="Control2/Settings/TextureRect/VBoxContainer/VBoxContainer/HBoxContainer2/FullscreenCheckbox" to="Control2/Settings" method="_on_FullscreenCheckbox_toggled"]
[connection signal="pressed" from="Control2/Settings/TextureRect/VBoxContainer/VBoxContainer/BackButton" to="Control2/Settings" method="_on_BackButton_pressed"]
